# a-maze-ing

./: .gitignore  Makefile  README.md  __init__.py  a_maze_ing.py  algorithm.py  audio.py  config.py  config.txt  display.py  exceptions.py  get_config.py  interface.py  maze.py  maze.txt  mazegen-1.0.0-py3-none-any.whl  pattern.py  pyproject.toml  render.py  requirements.txt  solver.py  testttt.py  utils.py  writer.py
algorithms/: sidewinder.py
maze_algorithms/: __init__.py  _binary_tree.py  utils.py
mazegen/: __init__.py  cell.py  maze.py
patterns/: 24.txt  42.txt  smile.txt
